--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^1.0.0",
     "express": "^4.10.4",
     "express-session": "^1.9.3",
+    "google-books-search": "^0.1.3",
     "method-override": "^2.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
