--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.3.3",
     "ejs": "^1.0.0",
     "express": "^4.10.4",
+    "express-partials": "^0.3.0",
     "express-session": "^1.9.3",
     "google-books-search": "^0.1.3",
     "method-override": "^2.3.0",
